# legal-rag-system

./: .env  README.md  app.py  chat_engine.py  config.py  extractor.py  main.py  pyproject.toml  requirements.txt  store.py  summariser.py
